--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
-Hello World
+I am a mathematics graduate student at the University of Wisconsin - Madison, working with Dr. Amy Cochran.
+
+I graduated from Colorado College in 2020 with a BA in mathematics.  
+My research interests are quantitative justice, interdisciplinary data analysis, and computational psychiatry.  
+Outside of research, I enjoy knitting and playing guitar.
